--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
+<meta charset="utf-8">
 <head>
 	<title>????</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1 class="titulo"> Nada de nada</h1>
+	<h1 class="titulo"> Oque seria o Vácuo</h1>
+	<main>
+		<section>
+		<img src="https://pm1.narvii.com/6264/c59b4044c4dea3b3da5d98669b341e10ce9f9be7_hq.jpg" class="imagem">
+			<p class="paragrafo"> Oque seria nada? o vácuo, a inesistencia? Eu sei lá oque é, mas só escrevi pra testar, de boa? de boa!</p>
+		</section>
+	</main>
 </body>
 </html>
